# lite-record

./: .gitignore  CHANGELOG.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture_session.rs  commands.rs  lib.rs  main.rs  overlay.rs  paths.rs  recorder.rs  tray.rs  windows_list.rs
src/assets/: index.css
src/components/ui/button/: Button.vue  index.ts
src/components/ui/label/: Label.vue
src/components/ui/radio-group/: RadioGroup.vue  RadioGroupItem.vue
src/composables/: useAppMessage.ts  useRecorder.ts  useVideoDir.ts
src/utils/: restoreMainWindow.ts
tests/: setup.ts
tests/e2e/: main.spec.ts
tests/mocks/: tauri-window.ts
tests/unit/: App.test.ts  formatDuration.test.ts  restoreMainWindow.test.ts  useRecorder.test.ts
